    Origin Pulse:
        Power: 110->120
        Accuracy: 85->90
    Disarming Voice:
        Power: 40->60
        PP: 15->20
    Comet Punch:
        Power: 18->20
        Accuracy: 85->90
    Fury Swipes:
        Power: 18->20
        Accuracy: 80->90
    Fury Attack:
        Power: 15->20
        Accuracy: 85->90
    Barrage:
        Power: 15->20
        Accuracy: 85->90
    Present:
        Accuracy: 90->100
        Now heals allies similar to Pollen Puff
        Damage odds:
            40% 40->20% 60
            30% 80->40% 80
            10% 120->20% 120

    Many signature moves and other moves were given 100% accuracy:
        Normal:
            Cut
            Crush Claw
            Slam
            Mega Punch
            Egg Bomb
        Fighting:
            Rolling Kick
            Submission
            Sky Uppercut
            Flying Press
        Flying:
            Air Cutter
            Air Slash
            Dual Wingbeat
        Ground:
            Bonemerang
            Bone Club
            Drill Run
            High Horsepower
        Rock:
            Rock Throw
            Rock Tomb
            Rock Slide
            Diamond Storm
        Electric:
            Thunder Cage
        Fire:
            Blaze Kick
        Water:
            Octazooka
            Razor Shell
            Aqua Tail
            Crabhammer
        Ice:
            Icicle Crash
            Mountain Gale
        Psychic:
            Zen Headbutt
            Psyshield Bash
            Mystical Power
        Steel:
            Metal Claw
            Steel Wing
            Meteor Mash
            Gear Grind
        Dark:
            Night Daze
        Fairy:
            Play Rough
            Strange Steam

Pokémon:
    ALL:
        Movesets a combination of Gens 7-9
            Typically this means they have their latest moveset plus most moves from their Gen 7 moveset that have been removed